# idot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: application.rs  configuration.rs  error.rs  linker.rs  logger.rs  main.rs  path_extension.rs
