[package]
name = "idot"
version = "0.1.0"
edition = "2018"

[dependencies]
shellexpand = "2.1"
path-absolutize = "3.0.7"
pathdiff = "0.2.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_yaml = "0.8"
serde_json = "1.0"

clap = "2"
colored = "1.8.0"
log = { version = "0.4.14", features = ["std"] }